--- a/html/howto-guides/002_installation.html
+++ b/html/howto-guides/002_installation.html
@@ -140,10 +140,43 @@
 <pre><code class="language-shell">curl -fsSL https://raw.githubusercontent.com/thin-edge/thin-edge.io/main/get-thin-edge_io.sh | sudo sh -s
 </code></pre>
 <p>You can execute that command on your device and it will do all required steps for an initial setup.</p>
-<p>If you prefer to have a little more control over the installation or the script did not work for you, please go on with the following steps.</p>
-<h2 id="manual-installation-steps"><a class="header" href="#manual-installation-steps">Manual installation steps</a></h2>
+<blockquote>
+<p>Note: If you want to get a specific version, add <code>&lt;version&gt;</code> at the end like below. 
+<code>&lt;version&gt;</code> is consist of 3 digits, e.g. <code>0.7.3</code>.</p>
+<pre><code class="language-shell">curl -fsSL https://raw.githubusercontent.com/thin-edge/thin-edge.io/main/get-thin-edge_io.sh | sudo sh -s &lt;version&gt;
+</code></pre>
+</blockquote>
+<p>If you prefer to have a little more control over the installation or the script did not work for you,
+please go on with the <a href="#manual-installation-steps">manual installation steps</a>.</p>
+<h2 id="upgrade-thin-edgeio-with-get-thin-edge_iosh-script"><a class="header" href="#upgrade-thin-edgeio-with-get-thin-edge_iosh-script">Upgrade thin-edge.io with get-thin-edge_io.sh script</a></h2>
+<p>If you already have <code>thin-edge.io</code> on your device, to upgrade <code>thin-edge.io</code>,
+the easiest way is to use the same script as the installation. Follow the steps below.
+there is no need to remove old version.</p>
+<blockquote>
+<p>Note: To successfully upgrade <code>thin-edge.io</code> all thin-edge.io components <strong>must be stopped</strong>. The components are:
+<code>tedge-mapper-c8y</code>, <code>tedge-mapper-az</code>, <code>tedge-mapper-collectd</code>, <code>tedge-agent</code>, <code>c8y-log-plugin</code>, <code>c8y-configuration-plugin</code>.</p>
+<p>To stop <code>tedge-mapper-c8y</code>, <code>tedge-agent</code>, <code>tedge-mapper-az</code>, you can simply run the commands below.</p>
+<pre><code class="language-shell">sudo tedge disconnect c8y
+sudo tedge disconnect az
+</code></pre>
+<p>To stop each component one by one, this is an example how to stop them with <code>systemctl</code>:</p>
+<pre><code class="language-shell">systemctl stop tedge-mapper-c8y
+systemctl stop tedge-agent
+systemctl stop c8y-log-plugin
+</code></pre>
+</blockquote>
+<p>Then, run <code>get-thin-edge_io.sh</code> script as below to upgrade to the latest version.</p>
+<pre><code class="language-shell">curl -fsSL https://raw.githubusercontent.com/thin-edge/thin-edge.io/main/get-thin-edge_io.sh | sudo sh -s
+</code></pre>
+<blockquote>
+<p>Note: If you want to upgrade to a specific version, add <code>&lt;version&gt;</code> at the end like below.
+<code>&lt;version&gt;</code> is consist of 3 digits, e.g. <code>0.7.3</code>.</p>
+<pre><code class="language-shell">curl -fsSL https://raw.githubusercontent.com/thin-edge/thin-edge.io/main/get-thin-edge_io.sh | sudo sh -s &lt;version&gt;
+</code></pre>
+</blockquote>
+<h2 id="thin-edgeio-manual-installation"><a class="header" href="#thin-edgeio-manual-installation">thin-edge.io manual installation</a></h2>
 <p>To install thin edge package it is required to use <code>curl</code> to download the package and <code>dpkg</code> to install it.</p>
-<h2 id="dependency-installation"><a class="header" href="#dependency-installation">Dependency installation</a></h2>
+<h3 id="dependency-installation"><a class="header" href="#dependency-installation">Dependency installation</a></h3>
 <p>thin-edge.io has single dependency and it is <code>mosquitto</code> used for communication southbound and northbound e.g. southbound, devices can publish measurements; northbound, gateway may relay messages to cloud.
 <code>mosquitto</code> can be installed with your package manager. For apt the command may look as following:</p>
 <pre><code class="language-shell">apt install mosquitto
@@ -153,17 +186,7 @@
 </blockquote>
 <pre><code class="language-shell">sudo apt install mosquitto
 </code></pre>
-<h2 id="thin-edgeio-installation"><a class="header" href="#thin-edgeio-installation"><code>thin-edge.io</code> installation</a></h2>
-<p>When all dependencies are in place you can proceed with installation of <code>thin-edge.io cli</code> and <code>thin-edge.io mapper</code> service.</p>
-<h3 id="upgrading-thin-edgeio"><a class="header" href="#upgrading-thin-edgeio">Upgrading <code>thin-edge.io</code></a></h3>
-<p>If you already have <code>thin-edge.io</code> on your device to upgrade <code>thin-edge.io</code> follow the steps below, there is no need to remove old version.</p>
-<blockquote>
-<p>Note: To successfully upgrade <code>thin-edge.io</code> all thin-edge.io components should be stopped, eg: <code>tedge-mapper</code> and <code>tedge-agent</code>:</p>
-<pre><code class="language-shell">systemctl stop tedge-mapper-c8y
-systemctl stop tedge-agent
-</code></pre>
-</blockquote>
-<h3 id="package-download"><a class="header" href="#package-download">Package download</a></h3>
+<h3 id="thin-edgeio-package-download"><a class="header" href="#thin-edgeio-package-download">thin-edge.io package download</a></h3>
 <p>thin-edge.io package is in thin-edge.io repository on GitHub: <a href="https://github.com/thin-edge/thin-edge.io/releases">thin-edge.io</a>.</p>
 <p>To download the package from github repository use following command (use desired version):</p>
 <pre><code class="language-shell">curl -LJO https://github.com/thin-edge/thin-edge.io/releases/download/&lt;package&gt;_&lt;version&gt;_&lt;arch&gt;.deb
@@ -179,7 +202,7 @@ systemctl stop tedge-agent
 <p>and for <code>mapper</code>:</p>
 <pre><code class="language-shell">curl -LJO https://github.com/thin-edge/thin-edge.io/releases/download/0.5.0/tedge_mapper_0.5.0_armhf.deb
 </code></pre>
-<h3 id="package-installation"><a class="header" href="#package-installation">Package installation</a></h3>
+<h3 id="thin-edgeio-package-installation"><a class="header" href="#thin-edgeio-package-installation">thin-edge.io package installation</a></h3>
 <p>Now, we have downloaded the package we can proceed to installation. First we will install cli tool <code>tedge</code>.</p>
 <blockquote>
 <p>Note: Some OSes may require you to use <code>sudo</code> to install packages and therefore all following commands may need <code>sudo</code>.</p>
@@ -195,6 +218,35 @@ systemctl stop tedge-agent
 </code></pre>
 <p>Eg:</p>
 <pre><code class="language-shell">dpkg -i tedge_mapper_0.5.0_armhf.deb
+</code></pre>
+<h2 id="uninstall-thin-edgeio"><a class="header" href="#uninstall-thin-edgeio">Uninstall <code>thin-edge.io</code></a></h2>
+<p>The <code>thin-edge.io</code> can be uninstalled using a script, that can be downloaded
+from below mentioned location. </p>
+<pre><code class="language-shell">wget https://raw.githubusercontent.com/thin-edge/thin-edge.io/main/uninstall-thin-edge_io.sh
+chmod a+x uninstall-thin-edge_io.sh
+</code></pre>
+<p>The uninstall script provides options as shown below.</p>
+<pre><code class="language-shell">USAGE: 
+   ./uninstall-thin-edge.io.sh [COMMAND]
+    
+COMMANDS:
+    remove     Uninstall thin-edge.io with keeping configuration files
+    purge      Uninstall thin-edge.io and also remove configuration files
+</code></pre>
+<blockquote>
+<p>Note: The uninstall script removes/purges the core thin-edge.io packages like <code>tedge, tedge_mapper, and tedge_agent</code> as well as thin-edge.io plugins like <code>tedge_apt_plugin, c8y_log_plugin, c8y_configuration_plugin</code> etc.</p>
+</blockquote>
+<h3 id="remove-thin-edgeio"><a class="header" href="#remove-thin-edgeio"><code>Remove</code> thin-edge.io</a></h3>
+<p>Use uninstall script as shown below just to <code>remove</code> the <code>thin-edge.io</code> packages.</p>
+<pre><code class="language-shell">./uninstall-thin-edge.io.sh remove
+</code></pre>
+<blockquote>
+<p>Note: Removes just the thin-edge.io packages and does not remove the <code>configuration</code> files.</p>
+</blockquote>
+<h3 id="purge-thin-edgeio"><a class="header" href="#purge-thin-edgeio"><code>Purge</code> thin-edge.io</a></h3>
+<p>Use uninstall script as shown below to remove the thin-edge.io as well as to remove the <code>configuration</code> files that are 
+associated with these thin-edge.io packages.</p>
+<pre><code class="language-shell">./uninstall-thin-edge.io.sh purge
 </code></pre>
 <h2 id="next-steps"><a class="header" href="#next-steps">Next steps</a></h2>
 <ol>
